plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.86'
    id 'me.modmuss50.mod-publish-plugin' version '0.4.5'
}

def secrets = new Properties()
if (file("./secrets.properties").exists()) {
    file("./secrets.properties").withInputStream {
        stream -> secrets.load(stream)
    }
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

// Java version target
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"

neoForge {
    version = neoforge_version

    validateAccessTransformers = true

    accessTransformers {
        file('src/main/resources/META-INF/accesstransformer.cfg')
    }

    parchment {
        mappingsVersion = parchment_version
        minecraftVersion = parchment_minecraft_version
    }

    runs {
        configureEach {
            gameDirectory = project.file('run')

            systemProperty 'forge.logging.markers', 'REGISTRIES'

            logLevel = org.slf4j.event.Level.DEBUG

            //Allows for reloading the project during runtime with compatible jvm
            jvmArgument "-XX:+AllowEnhancedClassRedefinition"

            systemProperty "mixin.env.remapRefMap", "true"
            systemProperty "mixin.env.refMapRemappingFile", "${projectDir}/build/createSrgToMcp/output.srg"
        }

        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()

            gameDirectory = project.file('run-server')
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            gameDirectory = project.file('run-data')
            programArguments.addAll '--mod', mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath(), '--existing-mod', 'create'
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        // Create, Ponder, Flywheel
        url = "https://maven.createmod.net"
    }
    maven {
        // Old repo for Registrate
        url = "https://maven.tterrag.com"
    }
    maven {
        // Registrate
        url = "https://mvn.devos.one/snapshots/"
    }
    maven {
        // ForgeConfigAPIPort
        url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
    }
    maven {
        // location of the maven that hosts JEI files before January 2023
        name = "Progwml6's maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        // location of the maven that hosts JEI files since January 2023
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    maven {
        // maven for Copycats+
        name = "realrobotixCopycats"
        url = "https://maven.realrobotix.me/copycats"
    }
    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }
    exclusiveContent {
        forRepository {
            maven {
                name = "Curse Maven"
                url = "https://cursemaven.com"
            }
        }
        filter {
            includeGroup "curse.maven"
        }
    }

    // Mod jar dependencies in ./libs
    flatDir {
        dir 'libs'
    }
}

dependencies {
    implementation "net.neoforged:neoforge:${neoforge_version}"

    implementation("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
    implementation("net.createmod.ponder:Ponder-NeoForge-${minecraft_version}:${ponder_version}")
    compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-${flywheel_minecraft_version}:${flywheel_version}")
    runtimeOnly("dev.engine-room.flywheel:flywheel-neoforge-${flywheel_minecraft_version}:${flywheel_version}")
    implementation("com.tterrag.registrate:Registrate:${registrate_version}")

    compileOnly("mezz.jei:jei-${jei_minecraft_version}-common-api:${jei_version}")
    compileOnly("mezz.jei:jei-${jei_minecraft_version}-neoforge-api:${jei_version}")
    runtimeOnly("mezz.jei:jei-${jei_minecraft_version}-neoforge:${jei_version}")

//    implementation("maven.modrinth:create-garnished:${garnished_version}")
//    runtimeOnly("maven.modrinth:create-dreams-and-desires:${dreams_desires_version}")
    implementation("com.copycatsplus:copycats:${copycats_version}")
    runtimeOnly("maven.modrinth:additional-placements:${additional_placements_version}")

    implementation(jarJar("io.github.llamalad7:mixinextras-neoforge:${mixin_extras_version}"))
}

// Expands all declared replace properties in the specified resource targets.
processResources {
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
    filteringCharset = 'UTF-8'

    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neoforge_version       : neoforge_version,
            neoforge_version_range : neoforge_version_range,
            loader_version_range   : loader_version_range,
            create_version_range   : create_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

// Get properties into the manifest for reading at runtime.
jar {
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)

    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1', // We are version 1 of ourselves
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

tasks.publishMods.dependsOn(tasks.assemble)
tasks.publishMods.mustRunAfter(tasks.build)

publishMods {
    changelog = "## NOTE: Create: Connected 1.0.0 or above only works with Create 6.0.0 or above!\n\nCheck out the detailed changelog at https://github.com/hlysine/create_connected/blob/main/CHANGELOG.md"
    type = STABLE
    file = jar.archiveFile
    modLoaders.add("forge")
    modLoaders.add("neoforge")

    github {
        accessToken = secrets.GITHUB_TOKEN
        repository = "hlysine/create_connected"
        commitish = "main"
    }

    modrinth {
        accessToken = secrets.MODRINTH_TOKEN
        projectId = "Vg5TIO6d"
        minecraftVersions.add(minecraft_version)

        requires {
            id = "LNytGWDc"
        }
        optional {
            id = "u6dRKJwZ"
        }
    }

    curseforge {
        accessToken = secrets.CURSEFORGE_TOKEN
        projectId = "947914"
        minecraftVersions.add(minecraft_version)
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

wrapper {
    gradleVersion = '8.10.1'
    distributionType = Wrapper.DistributionType.BIN
}